# FramePilot

./: .gitignore  architecture_design.md  build.py  config.yaml  pyproject.toml  requirements.txt  run.py  test_oauth.py
app/: __init__.py  main.py
app/application/di/: container.py
app/application/services/: download_service.py  enhancement_service.py  job_queue.py  project_service.py  stt_service.py  translation_service.py  tts_service.py  workflow_engine.py
app/core/: __init__.py  exceptions.py
app/core/entities/: asset.py  job.py  preset.py  project.py  workflow.py
app/core/interfaces/: downloader.py  enhancement.py  repository.py  speech.py  translation.py  tts.py
app/infrastructure/: logging_config.py
app/infrastructure/config/: settings.py  translation.py
app/infrastructure/database/: connection.py  models.py  repositories.py
app/modules/download/: yt_dlp_downloader.py
app/modules/enhancement/: enhancement_hub.py  ffmpeg_enhancer.py
app/modules/speech/: openai_stt_provider.py  provider_hub.py  whisper_stt_provider.py
app/modules/translation/: google_translator.py  gpt_translator.py  translator_hub.py
app/modules/tts/: local_tts.py  openai_tts.py  tts_hub.py
app/plugins/: loader.py
app/plugins/sdk/: plugin_base.py
app/ui/themes/: engine.py
app/ui/viewmodels/: downloader_viewmodel.py  enhancement_viewmodel.py  (+4 more)
tests/: conftest.py  test_database.py  test_di.py  test_downloader.py  test_enhancement.py  test_job_queue.py  test_plugin_loader.py  test_projects.py  test_settings.py  test_speech.py  test_translation_tts.py  test_workflow.py
(+7 files in other folders)
