[project]
name = "mediaflow-ai"
version = "0.1.0"
description = "An all-in-one AI-powered media processing studio"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.6.0",
    "SQLAlchemy[asyncio]>=2.0.0",
    "PyYAML>=6.0.1",
    "loguru>=0.7.2",
    "cryptography>=42.0.0",
    "keyring>=24.3.0",
    "aiosqlite>=0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.9.0",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "S", "B", "A", "C4", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
